# madrid-flip-hunter

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0553d75b1b42_add_capital_contributed_to_partners.py  159e9c154a2f_add_unique_constraint_on_neighborhood_.py  2cc8c55aefa1_add_tax_regime_to_financials.py  30b2217e8003_add_is_active_and_last_seen_at_to_.py  35cc1e9bdf31_add_notified_at_to_listings.py  524b41c51f6f_add_operation_partners.py  65461b452fa7_add_neighborhood_docs_table_with_.py  66191de6ba9e_add_performance_indexes.py  a1b2c3d4e5f6_add_precio_piso_to_expensecategory.py  afb84d6a4a3d_create_listings_table.py  c3d4e5f6a7b8_add_metros_to_operations.py  dfb57e6cd86a_add_score_reasoning_flags.py  eecb2901f4ac_add_deal_tracker_tables.py
backend/agents/: deactivate_stale.py  enrich_location.py  enrich_market_prices.py  enrich_size.py  market_prices.py  notifier.py  pre_scorer.py  qa_agent.py  reset_and_rescore.py  scoring_agent.py
backend/api/: expenses.py  investor.py  main.py  operations.py  partners.py  persons.py
backend/auth/: dependencies.py  router.py  security.py  seed.py
backend/models/: database.py  listing.py  neighborhood_doc.py  operation.py  repository.py
backend/rag/: embeddings.py  retrieval.py
backend/scrapers/: base_scraper.py  donpiso_scraper.py  idealista_scraper.py  redpiso_scraper.py  remax_scraper.py  run_scrapers.py  tecnocasa_scraper.py  wallapop_scraper.py
frontend/: index.html
scripts/: debug_ascao56.py  reembed_neighborhood_docs.py  seed_ascao56.py  seed_neighborhood_docs.py
tests/: test_operations_model.py  test_smoke.py
