[project]
name = "madrid-flip-hunter"
version = "0.1.0"
description = ""
authors = [
    {name = "fcrespo8",email = "fcrespo8@hotmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
